--- a/mindex.glade
+++ b/mindex.glade
@@ -260,7 +260,7 @@
                 <property name="vscroll_policy">natural</property>
                 <property name="reorderable">True</property>
                 <property name="rules_hint">True</property>
-                <property name="search_column">0</property>
+                <property name="enable_search">False</property>
                 <property name="fixed_height_mode">True</property>
                 <property name="hover_selection">True</property>
                 <property name="enable_grid_lines">vertical</property>
